--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
     <div id="generated-rule">
       <h2>Copie e cole no seu arquivo de CSS:</h2>
-      <div id="rule-area">
+      <div id="rules-area">
         <p id="rule">box-shadow <span></span></p>
         <p id="webkit-rule">-webkit-box-shadow <span></span></p>
         <p id="moz-rule">-moz-box-shadow <span></span></p>
