--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form-control">
           <div class="range-input">
-            <label for="horizontal">Deslocamento vertical:</label>
+            <label for="vertical">Deslocamento vertical:</label>
             <input
               type="range"
               id="vertical"
@@ -47,7 +47,7 @@
         </div>
         <div class="form-control">
           <div class="range-input">
-            <label for="horizontal">Intensidade do borrão (Blur):</label>
+            <label for="blur">Intensidade do borrão (Blur):</label>
             <input
               type="range"
               id="blur"
@@ -64,9 +64,7 @@
         </div>
         <div class="form-control">
           <div class="range-input">
-            <label for="horizontal"
-              >Intensidade do espalhamento (Spread):</label
-            >
+            <label for="spread">Intensidade do espalhamento (Spread):</label>
             <input
               type="range"
               id="spread"
@@ -81,6 +79,38 @@
             <p>px</p>
           </div>
         </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="horizontal">Cor da sombra:</label>
+            <input type="color" id="color" name="color" value="#000000" />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="color-value" name="color-value" />
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="opacity">Opacidade:</label>
+            <input
+              type="range"
+              id="opacity"
+              name="opacity"
+              min="0"
+              max="1"
+              value="1"
+              step="0.01"
+            />
+          </div>
+          <div class="reference-input">
+            <input type="text" id="opacity-value" name="opacity-value" />
+          </div>
+        </div>
+        <div class="form-control">
+          <div class="range-input">
+            <label for="opacity">Sombra interna? (Inset)</label>
+            <input type="checkbox" id="inset" name="inset" />
+          </div>
+        </div>
       </div>
       <div id="preview">
         <h2>Preview do efeito gerado:</h2>
@@ -90,10 +120,13 @@
     <div id="generated-rule">
       <h2>Copie e cole no seu arquivo de CSS:</h2>
       <div id="rules-area">
-        <p id="rule">box-shadow: <span></span></p>
-        <p id="webkit-rule">-webkit-box-shadow: <span></span></p>
-        <p id="moz-rule">-moz-box-shadow: <span></span></p>
+        <p id="rule">box-shadow: <span></span>;</p>
+        <p id="webkit-rule">-webkit-box-shadow: <span></span>;</p>
+        <p id="moz-rule">-moz-box-shadow: <span></span>;</p>
       </div>
+      <p id="copy-instructions">
+        Clique no quadro acima para copiar as regras.
+      </p>
     </div>
   </body>
 </html>
